# squishv

./: .gitignore  Cargo.toml  Justfile  README.md
debugger/: Cargo.toml  Dioxus.toml  package-lock.json  package.json  tailwind.config.js  tailwind.css  tsconfig.json  vite.config.ts
debugger/public/: tailwind.css
debugger/src/: App.svelte  CodeDisplay.svelte  main.rs  main.ts
debugger/src/code/: Program.svelte
debugger/src/stores/: source.ts
riscv/: Cargo.toml  LICENSE_MIT  instructions.txt  registers.txt  test.py
riscv/src/: executor.rs  instructions.txt  lex.rs  lib.rs  main.rs  parse.rs  parse_v2.rs  regs.py  test.s
riscv/src/executor/: memory.rs  mod.rs
riscv/tests/: random.s  test.s
