[package]
name = "debugger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_log = "1.0.0"
dioxus = "0.4.0"
dioxus-web = "0.4.0"
log = "0.4.20"
anyhow = "1"
riscv = { version = "0.1", path = "../riscv"}
