[package]
name = "riscv"
version = "0.1.0"
authors = ["Felix Prasanna <fpx@mit.edu>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["wee_alloc"]

[dependencies]
wasm-bindgen = "0.2.63"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
wee_alloc = { version = "0.4.5", optional = true } # small allocator

[profile.release]
opt-level = "s"
